--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Assignment Solution for Module 2</title>
+  <!-- Link to external CSS file -->
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <h1>Our Menue</h1>
+  
+</body>
+</html>
