--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,7 +8,24 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Our Menue</h1>
+  <h1>Our Menu</h1>
   
+  <div class="menu-container">
+    <div class="menu-item">
+      <div class="menu-title chicken">Chicken</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <div class="menu-item">
+      <div class="menu-title beef">Beef</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <div class="menu-item">
+      <div class="menu-title sushi">Sushi</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+
 </body>
 </html>
