--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,21 +10,21 @@
 <body>
   <h1>Our Menu</h1>
   
-  <div class="menu-container">
-    <div class="menu-item">
-      <div class="menu-title chicken">Chicken</div>
+  <div class="row">
+    <section class="col col-chicken">
+      <div class="section-title chicken">Chicken</div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+    </section>
 
-    <div class="menu-item">
-      <div class="menu-title beef">Beef</div>
+    <section class="col col-beef">
+      <div class="section-title beef">Beef</div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+    </section>
 
-    <div class="menu-item">
-      <div class="menu-title sushi">Sushi</div>
+    <section class="col col-sushi">
+      <div class="section-title sushi">Sushi</div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+    </section>
   </div>
 
 </body>
