--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -22,7 +22,13 @@
           <div class="navbar-brand">
             <h1>Food, LLC</h1>
           </div>
-          
+        
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Chicken</a></li>
+              <li><a href="#">Beef</a></li>
+              <li><a href="#">Sushi</a></li>
+            </ul>
         </div>
       </div>
     </nav>
