--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -39,7 +39,13 @@
 
   <div id="main-content" class="container">
     <div class="jumbotron">
-      <h2>Chicken</h2>
+    
+      <div class="row">
+        <section class="col col-chicken">
+          <div>Chicken</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </section>
+      
     </div>
 
   </div>
