--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -11,13 +11,12 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-
-  <!-- NAVBAR -->
+ <!-- NAVBAR -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for mobile -->
+      <!-- Brand and toggle -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#nav-list" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-list">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -26,12 +25,12 @@
         <a class="navbar-brand" href="#">Food, LLC</a>
       </div>
 
-      <!-- Dropdown menu for mobile only -->
+      <!-- Mobile Menu -->
       <div class="collapse navbar-collapse" id="nav-list">
-        <ul class="nav navbar-nav visible-xs">
-          <li><a href="#chicken">Chicken</a></li>
-          <li><a href="#beef">Beef</a></li>
-          <li><a href="#sushi">Sushi</a></li>
+        <ul class="nav navbar-nav visible-xs text-center">
+          <li><a href="#" class="menu-link" data-target="#chicken">Chicken</a></li>
+          <li><a href="#" class="menu-link" data-target="#beef">Beef</a></li>
+          <li><a href="#" class="menu-link" data-target="#sushi">Sushi</a></li>
         </ul>
       </div>
     </div>
@@ -45,6 +44,7 @@
   <!-- CONTENT SECTIONS -->
   <div class="container-fluid">
     <div class="row">
+      
       <!-- Chicken Section -->
       <div class="col-xs-12" id="chicken">
         <div class="menu-item">
@@ -58,31 +58,6 @@
         </div>
       </div>
 
-      <!-- Beef Section -->
-      <div class="col-xs-12" id="beef">
-        <div class="menu-item">
-          <h3 class="text-center">Beef</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-      </div>
-
-      <!-- Sushi Section -->
-      <div class="col-xs-12" id="sushi">
-        <div class="menu-item">
-          <h3 class="text-center">Sushi</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-      </div>
     </div>
   </div>
   
