--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -60,10 +60,10 @@
 
     </div>
   </div>
-  
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
+
+  <!-- Bootstrap JS -->
+  <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  
 </body>
 </html>
