--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -50,10 +50,10 @@
         <div class="menu-item">
           <h3 class="text-center">Chicken</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Chicken is one of the most widely enjoyed and versatile sources of protein in the world, and when prepared with care it can be both comforting and flavorful. Our chicken dish begins with carefully selected cuts of tender, farm-raised chicken that are marinated overnight in a mixture of aromatic herbs, garlic, and a hint of lemon juice. The marinade allows the flavors to penetrate deeply, ensuring every bite is juicy and well-seasoned.
+          Once marinated, the chicken is slowly roasted until golden brown on the outside while remaining moist and succulent inside. This method of cooking preserves the natural juices of the meat, enhancing both its texture and flavor. To accompany the chicken, we prepare a light but rich sauce made from a reduction of fresh vegetables, olive oil, and a touch of white wine, creating a balance between savory and slightly tangy notes.
+          The dish is served alongside seasonal vegetables that are sautéed to maintain their crispness and natural sweetness, providing both color and freshness to the plate. For added depth, we pair the chicken with a portion of buttery mashed potatoes, which complement the savory richness of the meat and sauce.
+          This chicken dish is not only satisfying but also nourishing, offering lean protein along with a balanced mix of carbohydrates and vitamins from the vegetables. It represents a perfect example of simple ingredients elevated through thoughtful preparation, making it a meal that appeals to both traditional tastes and modern expectations.
           </p>
         </div>
       </div>
